--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@ body, html,h1,h2,h3,h4,h5,h6,p {
     padding: 0;    
 }
 .container{
-    background-color: hsla(0, 0%, 0%, 0.94);
+    background-color: hsla(0, 1%, 33%, 0.617);
     display: flex;        
     justify-content: center;    
     height: 100vh;    
@@ -22,34 +22,43 @@ body, html,h1,h2,h3,h4,h5,h6,p {
 }
 .section-A .input-button-wrapper {    
     display: flex;
-    flex-direction: column;
-    /* align-items: stretch;  */
+    flex-direction: column;    
     gap: 15px;
 }
 .section-A button{
-    padding: 12px 15px;
+    padding: 15px 15px;
     background-color: #AEDCAE;    
     font-size: 14px;
-    font-style: bold;
+    font-weight: bold;
     border: none;
 }  
 
 .section-A input, .section-B input{    
-    padding: 10px 10px;
+    padding: 12px 12px;
     border: none;    
     outline-color: rgb(0, 179, 255);    
     font-size: 18px;
     font-weight: bold;      
 }
 
+.section-B input{
+    width: 100%;
+}
+.pin-box label {
+    width: 50%;
+}
+
 .section-B{    
     display: flex;        
     flex-direction: column;
-    justify-content: center;        
-    border-right: 1px solid #fff;    
+    justify-content: center;             
     color: #fff;  
     width: 50%;  
     align-items: center; 
+}
+.section-B-wrapper{    
+    display: flex;
+    flex-direction: column;
 }
 .section-B .pin-box{    
     display: flex;            
@@ -68,7 +77,7 @@ body, html,h1,h2,h3,h4,h5,h6,p {
 }
 
 .keypad .key{
-    padding: 12px 15px;
+    padding: 15px 15px;
     border: none;          
     font-weight: 600;
     font-size: 14px;
@@ -76,3 +85,35 @@ body, html,h1,h2,h3,h4,h5,h6,p {
     cursor: pointer;
 }
 
+.keypad .submit{
+    background-color: #AEDCAE;    
+}
+.keypad .clear{
+    background-color: #ff1515;
+    color: #fff;    
+}
+
+.keypad .bc{
+    background-color: #FF5F15;
+    color: #fff;    
+}
+
+.alert{        
+    padding: 15px;
+    margin-bottom: 20px;
+    border: 1px solid transparent;
+    border-radius: 4px; 
+    display: none;   
+}
+
+.success{    
+    color: #3c763d;
+    background-color: #dff0d8;
+    border-color: #d6e9c6;    
+}
+
+.error{
+    color: #a94442;
+    background-color: #f2dede;
+    border-color: #ebccd1;
+}
