--- a/css/style.css
+++ b/css/style.css
@@ -67,6 +67,8 @@ body, html,h1,h2,h3,h4,h5,h6,p {
 }
 .section-B .pin-box label{ 
     padding: 15px 15px 0 0;
+    color: #000;
+    font-weight: 600;
  }
 .section-B .keypad{    
     display: grid;        
