--- a/css/responsive.css
+++ b/css/responsive.css
@@ -15,7 +15,17 @@
 
 /* Small devices (portrait tablets and large phones, 600px and up) */
 @media only screen and (min-width: 600px) {
-  
+    .container{ 
+        flex-direction: column;
+        justify-content: center;
+    }
+
+    .section-A, .section-B{
+        width: 95%;
+        justify-content: center;
+        margin: 30px auto;
+        border: none;
+    }      
 }
 
 /* Medium devices (landscape tablets, 768px and up) */
