--- a/css/responsive.css
+++ b/css/responsive.css
@@ -16,7 +16,7 @@
 /* Small devices (portrait tablets and large phones, 600px and up) */
 @media only screen and (min-width: 600px) {
     .container{ 
-        flex-direction: column;
+        flex-direction: row;
         justify-content: center;
     }
 
